# nbody_hls

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
golden/: ._n1024_t1.txt  n1024_t1.txt  n1024_t2.txt  n16384_t1.txt  n16384_t16.txt  n16384_t2.txt  n256_t1.txt  n256_t2.txt  n8192_t1.txt  n8192_t16.txt  n8192_t2.txt  n8192_t8.txt
host/: RunNBody.cpp
hw/: top.v.in
include/: Config.h.in  Memory.h  NBody.h  Utility.h
kernel/: Memory.cpp  NBody.cpp
scripts/: O_opt_design_pre.tcl  Synthesis.tcl.in  build_manager.py  config.tcl.in  create_ips.tcl  create_project.tcl  hls.tcl.in  optMap.xml  package_kernel.tcl  project_manager.py
src/: Stats.cpp
test/: TestNBody.cpp  TestNonDivisiblePack.cpp
